# tic_tac_toe_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: availability_check.rs  board.rs  cli.rs  gui.rs  main.rs  players.rs
src/cli/: availability_check.rs  players.rs
src/gui/: system.rs
