[package]
name = "Tic-Tac-Toe"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]



[dependencies]
itertools = "0.10.3"
bevy = "0.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
overflow-checks = true
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

